<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="365dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/Initiate"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/button_round"
            app:srcCompat="@drawable/button_round"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/Information"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/button_round"
            app:srcCompat="@drawable/button_round"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/tutorial"
        android:layout_width="179dp"
        android:layout_height="101dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/button_texture_square"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Tutorial"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/tutorial"
        android:layout_alignLeft="@+id/tutorial"
        android:layout_alignBottom="@+id/tutorial"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="42dp"
        android:text="@string/Tutorial_button"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="98dp"
        android:layout_height="86dp"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/lamac_alpha" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/iniciar"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/informacoes"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:gravity="center"
            android:text="@string/informa_es"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>